# CodeForge

./: .gitignore  README.md  pyproject.toml  v0.1prompt.md
.agentforge/: config.yaml  policies.yaml  workflow.yaml
.agentforge/roles/: architect.md  implementer.md  reviewer.md  verifier.md
CodeForge/: __init__.py  cli.py
CodeForge/executors/: __init__.py  base.py  claude_code.py  codex.py
CodeForge/runtime/: __init__.py  approval_hook.py  approval_prompt.py  config.py  context.py  router.py  state.py
tasks/: README.md
tests/: test_approval.py  test_cli.py  test_executors.py  test_runtime.py
