[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeforge-harness"
version = "0.1.2"
description = "A lightweight coding-agent orchestration harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
codeforge = "CodeForge.cli:main"

[tool.setuptools.packages.find]
include = ["CodeForge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
